--- a/src/index.css
+++ b/src/index.css
@@ -65,7 +65,7 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 6px;
 }
 ::-webkit-scrollbar-thumb {
   background-color: #f5f5f5;
